<?xml version="1.0"?>
<package format="2">

  <name>apriltag_ekf_slam</name>
  <version>0.0.0</version>

  <description>
    TODO
  </description>

  <maintainer email="adityashriwastava7@gmail.com">Aditya Shriwastava</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>

  <build_depend>sensor_msgs</build_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <build_depend>cv_bridge</build_depend>
  <exec_depend>cv_bridge</exec_depend>

  <build_depend>tf2_ros</build_depend>
  <exec_depend>tf2_ros</exec_depend>

  <build_depend>tf2</build_depend>
  <exec_depend>tf2</exec_depend>

  <build_depend>geometry_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <build_depend>tf2_geometry_msgs</build_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>

  <build_depend>cmake_modules</build_depend>
  <exec_depend>cmake_modules</exec_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <build_depend>apriltag_ekf_slam_msgs</build_depend>
  <exec_depend>apriltag_ekf_slam_msgs</exec_depend>

</package>
