<?xml version="1.0"?>
<package format="2">

  <name>apriltag_ekf_slam_msgs</name>
  <version>0.0.0</version>

  <description>
    TODO
  </description>

  <maintainer email="adityashriwastava7@gmail.com">Aditya Shriwastava</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_depend>geometry_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
